@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0

title Class Diagram - US19

class StoreDivisionController {
    + StoreDivisionController()
    + prepareStoreList(inputStores: List<Tuple<String, Integer>>): List<Tuple<String, Integer>>
    + partitionTest2(inputStores: List<Tuple<String, Integer>>): Map<String, Object>
    + findBalancedPartition(stores: List<Tuple<String, Integer>>): List<List<Tuple<String, Integer>>>
    + calculateDifferenceOfSums(balancedPartition: List<List<Tuple<String, Integer>>>): int
    + getProperties(): ArrayList<Property>
}

class Property {
    - agencyID: int
}

'class Tuple<String, Integer> {
class Tuple {
    + getFirst(): String
    + getSecond(): Integer
}

class NetworkManagerDivideStoresWindow {
    - StoreDivisionController: StoreDivisionController
    - btnImport: Button
    - btnRunTimeTests: Button
    - btnDivideStores: Button
    - btReturn: Button
    + getProperties(): void
    + onBtReturn(): void
    + onBtImport(): void
    + onbtnRunTimeTests(): void
    + onBtnDivideStores(): void
}

StoreDivisionController ..> Property
StoreDivisionController ..> Tuple
NetworkManagerDivideStoresWindow ..> StoreDivisionController

@enduml
